--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "name": "Marc.Zaharescu"
   },
   "scripts": {
-    "start": "babel-node ./server/server.js"
+    "start": "babel-node ./server/server.js",
+    "webpack": "webpack --config=webpack.config.js"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1"
+    "babel-cli": "^6.24.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
   },
   "devDependencies": {
+    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "webpack": "^2.4.1"
